cabal-version:      2.4
name:               press-control
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             paolo
maintainer:         paolo.veronelli@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable press-control
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base           ^>=4.17.2.1
    , press-control

  hs-source-dirs:   app
  default-language: Haskell2010

library
  -- Modules included in this library.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base
  hs-source-dirs:   lib
  default-language: Haskell2010
  exposed-modules:
    Load
    Machine
    Operation
    Recipe
    Tool

-- add a test suite that runs the executable with some test data
test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  build-depends:
    , base
    , hspec
    , press-control

  hs-source-dirs:   test
  other-modules:
    LoadSpec
    MachineSpec
    OperationSpec
    RecipeSpec
    ToolSpec

  default-language: Haskell2010
